--- a/.classpath
+++ b/.classpath
@@ -8,13 +8,9 @@
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_171">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/Ruan/Documents/Pen/Principal/6º Semestre/Lab Engenharia/mysql-connector-java-5.1.13-bin.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ruan/git/AmigoSecretoLES/WebContent/WEB-INF/lib/javax.faces-2.2.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ruan/git/AmigoSecretoLES/WebContent/WEB-INF/lib/primefaces-6.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
